--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -20,15 +20,14 @@
 
   --cinza-clarinho: #F2F2F2;
   --cinza-claro: #e6e6e6;
+  --cinza-medio-claro: #ccc;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-600: #00000066;
-  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
 
   // Main element colors
   --color-main: var(--azul-leitura);
-  --color-heading: var(--color-main);
+  --color-heading: var(--color-black);
   --color-paragraph: var(--color-east-bay);
 
   // Modern link
