--- a/sass/variables/_forms.scss
+++ b/sass/variables/_forms.scss
@@ -22,9 +22,9 @@
 
   // Form element settings
   --border-radius-checkbox: 3px;
-  --border-radius-input-field: 3px;
-  --border-radius-button: 3px;
-  --border-radius-select: 3px;
+  --border-radius-input-field: 0;
+  --border-radius-button: 0;
+  --border-radius-select: 0;
   --border-width-checkbox: 1px;
   --border-width-input-field: 1px;
   --typography-size-input-fields: var(--typography-size-17);
