--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -3,5 +3,7 @@
 @forward 'views/notFound';
 @forward 'views/single';
 @forward 'views/comments';
+@forward 'views/home';
+@forward 'views/queridinhos';
 
 /* views/_index.scss */
