--- a/sass/features/_slider.scss
+++ b/sass/features/_slider.scss
@@ -35,10 +35,6 @@
 }
 
 .owl-carousel .owl-stage-outer {
-
-  width: 100%;
-  max-width: 1400px;
-  height: 600px;
   position: relative;
   overflow: hidden;
   /* fix for flashing background */
@@ -59,6 +55,7 @@
 }
 
 .owl-carousel .owl-item {
+  display: flex;
   position: relative;
   min-height: 1px;
   float: left;
@@ -97,6 +94,35 @@
   border: none;
   padding: 0 !important;
   font: inherit;
+}
+
+.owl-carousel .owl-nav button.owl-prev span,
+.owl-carousel .owl-nav button.owl-next span {
+  display: none;
+}
+
+.owl-carousel .owl-nav button.owl-prev:before,
+.owl-carousel .owl-nav button.owl-next:before {
+  display: block;
+  position: relative;
+  height: 30px;
+  width: 40px;
+}
+
+.owl-carousel .owl-nav .owl-prev {
+  float: left;
+
+  &:before {
+    content: '←';
+  }
+}
+
+.owl-carousel .owl-nav .owl-next {
+  float: right;
+
+  &:before {
+    content: '→'
+  }
 }
 
 .owl-carousel.owl-loaded {
