--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -12,11 +12,15 @@
   box-sizing: border-box;
 }
 
-.wp-block-acf-cta-1-3,
-.wp-block-acf-revista {
-  width: 33.33%;
+.wp-block-columns {
+  gap: 20px;
 }
 
-.wp-block-acf-cta-2-3 {
-  width: 66.66%;
-}
+// .wp-block-acf-cta-1-3,
+// .wp-block-acf-revista {
+//   width: 33.33%;
+// }
+
+// .wp-block-acf-cta-2-3 {
+//   width: 66.66%;
+// }
