--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -5,6 +5,6 @@
 @forward 'layout/site-footer';
 @forward 'layout/forms';
 @forward 'layout/wordpress';
-@forward 'layout/home';
+@forward 'layout/grid';
 
 /* layout/_index.scss */
