--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -188,18 +188,17 @@
   }
 }
 
-.site-content{
-  width: 100%;
-  max-width: 1400px;
-  display: flex;
-  margin: 0 auto;
+// .site-content {
+//   width: 100%;
+//   max-width: 1400px;
+//   display: flex;
+//   margin: 0 auto;
 
-  .site-main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 1400px;
-    gap: 39.5px;
-  }
-}
-
+//   .site-main {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//     max-width: 1400px;
+//     gap: 60px;
+//   }
+// }
