--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -16,11 +16,40 @@
   gap: 20px;
 }
 
-// .wp-block-acf-cta-1-3,
-// .wp-block-acf-revista {
-//   width: 33.33%;
-// }
+.wp-block-group {
+  margin-top: 60px;
+}
 
-// .wp-block-acf-cta-2-3 {
-//   width: 66.66%;
-// }
+img.cta-image {
+  width: 100%;
+}
+
+.cta-link {
+  line-height: 0;
+}
+
+.revista-container {
+  display: flex;
+  max-width: $container-mobile;
+  max-height: 250px;
+  background-color: var(--color-white);
+  padding: 20px;
+  gap: 20px;
+
+  .conteudo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .button {
+      font-weight: var(--typography-weight-medium);
+      text-align: left;
+      width: 100%;
+    }
+  }
+
+  .size-revista {
+    width: 125px;
+    height: 178px;
+  }
+}
