--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -18,9 +18,6 @@ body:not(.wp-admin) {
   line-height: var(--typography-paragraph-line-height);
   // stylelint-disable-next-line value-keyword-case
   text-rendering: geometricPrecision;
-}
-
-body.home {
   background-color: var(--cinza-clarinho);
 }
 
@@ -166,20 +163,20 @@ section {
 // stylelint-disable-next-line a11y/no-display-none
 .hide-completely {
   // stylelint-disable-next-line declaration-no-important
-  // display: none !important;
+  display: none !important;
 }
 
-a.sublinhado-bonito {
+a.sublinhado-bonito,
+.post-title a {
   position: relative;
   display: inline;
-  background-image: linear-gradient(var(--cinza-medio), var(--cinza-medio));
-  background-size: 0% 1px;
+  background-image: linear-gradient(var(--cinza-escuro), var(--cinza-escuro));
+  background-size: 0% 2px;
   background-repeat: no-repeat;
   background-position: 0 100%;
   transition: background-size 0.3s ease-in-out;
-  letter-spacing: -0.66px;
 
   &:hover {
-    background-size: 100% 1px;
+    background-size: 100% 2px;
   }
 }
