--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,5 +1,15 @@
+@use 'variables/breakpoints';
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+
+  @media (max-width: breakpoints.$width-max-mobile) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: breakpoints.$container-mobile) {
+    grid-template-columns: 1fr;
+  }
 }
