--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -5,5 +5,6 @@
 @forward 'views/comments';
 @forward 'views/home';
 @forward 'views/queridinhos';
+@forward 'views/blog';
 
 /* views/_index.scss */
