--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -8,7 +8,6 @@
   --color-black: #000;
   --color-blue-chalk: #e6e6e6;
   --color-east-bay: #545773;
-  --color-pattens-blue: #f7f7f7;
   --color-science-blue: #004D8F;
   --color-scorpion: #5f5f5f;
   --color-valhalla: #2a2d3e;
@@ -18,10 +17,11 @@
   --azul-forte: #005CE8; // 0, 92, 232
   --destaque: #F7710C; // 247, 113, 12
 
+  --cinza-fundo-site: #f7f7f7;
   --cinza-clarinho: #F2F2F2;
   --cinza-claro: #e6e6e6;
   --cinza-medio-claro: #ccc;
-  --cinza-medio: #9b9b9b;
+  --cinza-medio: #999;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
 
