--- a/sass/features/_pagination.scss
+++ b/sass/features/_pagination.scss
@@ -2,19 +2,23 @@
 
 // Alternative style: https://i.imgur.com/A8gUyu2.png
 // stylelint-disable a11y/font-size-is-readable
-.navigation:not(.post-navigation) .nav-links {
-  align-items: flex-start;
-  display: flex;
-  font-family: var(--typography-family-heading);
-  font-size: 0.875rem;
-  justify-content: flex-start;
-  margin-top: 2.5rem;
-  overflow: hidden;
-  text-align: left;
-  width: 100%;
+.navigation:not(.post-navigation) {
+  grid-column: span 2;
 
-  a {
-    text-decoration: none;
+  .nav-links {
+    align-items: flex-start;
+    display: flex;
+    font-family: var(--typography-family-heading);
+    font-size: 0.875rem;
+    justify-content: flex-start;
+    margin-top: 2.5rem;
+    overflow: hidden;
+    text-align: left;
+    width: 100%;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
 
