--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -1,5 +1,10 @@
 @use 'variables/index' as *;
 
+.cta {
+  display: flex;
+  align-items: center;
+}
+
 .wp-block-acf-cta-1-3,
 .wp-block-acf-cta-2-3,
 .wp-block-acf-revista {
@@ -46,6 +51,7 @@ img.cta-image {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-grow: 1;
 
     .button {
       font-weight: var(--typography-weight-medium);
@@ -54,8 +60,8 @@ img.cta-image {
     }
   }
 
-  .size-revista {
-    width: 125px;
-    height: 178px;
+  .img-thumbnail {
+    width: 100%;
+    flex-grow: 0;
   }
 }
