--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -23,14 +23,15 @@
   // Sub menu items on desktop
   --typography-size-sub-menu: var(--typography-size-16);
   --typography-weight-sub-menu: var(--typography-weight-regular);
-  --padding-sub-menu-vertical: 0.375rem;
+  --padding-sub-menu-vertical: 35px;
+  --padding-sub-menu-horizontal: 20px;
   --padding-sub-menu-link-vertical: 0.3125rem;
   --padding-sub-menu-link-horizontal: 0.9375rem;
   --width-sub-menu: 12.5rem;
   --color-sub-menu: var(--color-valhalla);
   --color-hover-sub-menu: var(--color-valhalla);
   --color-background-sub-menu: var(--color-white);
-  --gap-dropdown: 0.625rem;
+  --gap-dropdown: 39px;
 }
 
 // General navigation resets
@@ -135,8 +136,23 @@
 
   .menu-item.menu-item-has-children.hover-intent .sub-menu,
   .menu-item.menu-item-has-children:focus .sub-menu {
-    padding-bottom: var(--padding-sub-menu-vertical);
-    padding-top: var(--padding-sub-menu-vertical);
+    padding: var(--padding-sub-menu-vertical) var(--padding-sub-menu-horizontal);
+
+    &:before {
+      content: '↓';
+      position: absolute;
+      left: calc(50% - 12px);
+      top: -12px;
+      display: block;
+      border-radius: 50%;
+      width: 23px;
+      height: 23px;
+      background-color: var(--color-black);
+      color: var(--color-white);
+      font-weight: var(--typography-weight-regular);
+      line-height: 23px;
+      text-align: center;
+    }
   }
 
   .nav-primary>ul:first-of-type>.menu-item-has-children:focus::before,
