--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -4,7 +4,7 @@
   margin: 0;
 }
 
-body.home section {
+section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,21 +29,6 @@ body.home section {
 
       &:hover {
         color: var(--cinza-medio);
-      }
-
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: -2px;
-        width: 0%;
-        height: 2px;
-        background-color: currentColor;
-        transition: width 0.3s ease-in-out;
-      }
-
-      &:hover::after {
-        width: 100%;
       }
     }
   }
@@ -73,27 +58,6 @@ body.home section {
   a {
     color: var(--color-black);
     text-decoration: none;
-  }
-}
-
-.grid {
-
-  article {
-    background: #fff;
-    padding: 40px;
-    grid-row: auto;
-
-    &.post-destaque:nth-child(-n + 2) {
-      grid-row: span 2;
-    }
-  }
-
-  .thumbnail {
-    margin-bottom: 20px;
-
-    .img-thumbnail {
-      width: 100%;
-    }
   }
 }
 
@@ -175,69 +139,65 @@ time {
     }
   }
 
-  .resenhas-container {
 
-    .resenha-item {
-      position: relative;
-      background: var(--color-white);
-      padding: 70px 70px 190px 70px;
-      text-align: center;
+  .resenha-item {
+    position: relative;
+    background: var(--color-white);
+    padding: 70px 70px 190px 70px;
+    text-align: center;
+  }
 
-      .resenha-titulo {
-        text-transform: uppercase;
-        height: 110px;
-        margin-bottom: 40px;
+  .resenha-titulo {
+    text-transform: uppercase;
+    height: 110px;
+    margin-bottom: 40px;
 
-        h3,
-        h4 {
-          margin: 10px 0;
-        }
-
-        h4 {
-          font-weight: var(--typography-weight-medium);
-          font-size: 1rem;
-        }
-      }
-
-      .autor-info {
-        margin-top: 20px;
-      }
-
-      .autor-info {
-        display: flex;
-        align-items: center;
-        gap: 25px;
-        position: relative;
-        margin-bottom: 40px;
-
-        .autor-foto {
-          width: 86px;
-          height: 86px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-
-        .autor-nome {
-          color: var(--azul-leitura);
-          font-weight: var(--typography-weight-semibold);
-          text-transform: uppercase;
-          margin: 0;
-        }
-
-        .aspas {
-          position: absolute;
-          top: 0;
-        }
-      }
-
-      .resenha-data {
-        position: absolute;
-        bottom: 70px;
-        left: 70px;
-        margin: 0;
-        text-transform: uppercase;
-      }
+    h3,
+    h4 {
+      margin: 10px 0;
     }
+
+    h4 {
+      font-weight: var(--typography-weight-medium);
+      font-size: 1rem;
+    }
+  }
+
+  .autor-info {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 40px;
+
+    .autor-foto {
+      width: 86px;
+      height: 86px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .autor-nome {
+      color: var(--azul-leitura);
+      font-weight: var(--typography-weight-semibold);
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .aspas {
+      position: absolute;
+      top: 0;
+      width: auto;
+    }
+  }
+
+  .resenha-data {
+    position: absolute;
+    bottom: 70px;
+    left: 70px;
+    margin: 0;
+    text-transform: uppercase;
   }
 
   @media (max-width: breakpoints.$width-max-mobile) {
