--- a/sass/views/_single.scss
+++ b/sass/views/_single.scss
@@ -6,6 +6,8 @@
 .tags {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
   list-style: none;
   list-style-type: none;
   padding-inline-start: 0;
@@ -13,7 +15,7 @@
 
 .categories,
 .article-content .categories {
-  margin: 0;
+  // margin: 0;
   gap: 0.75rem;
 }
 
@@ -68,9 +70,61 @@
   }
 }
 
+
+.article-content {
+
+  .categories {
+    justify-content: center;
+  }
+
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    &:before {
+      content: '→';
+      display: inline;
+      margin-right: 10px;
+    }
+  }
+
+  .data-e-autor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p {
+      margin: 1.6rem;
+      font-weight: var(--typography-weight-medium);
+      text-transform: uppercase;
+      font-size: 90%;
+    }
+  }
+}
+
 // Next/Previous single post navigation
 .post-navigation .nav-links {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.post-navigation {
+  h2 {
+    text-transform: uppercase;
+  }
+
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+
+    .categories {
+      font-size: 50%;
+    }
+
+    time {
+      font-size: var(--typography-size-14);
+    }
+  }
 }
