--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -207,7 +207,7 @@ input[type="checkbox"]+label:focus {
   gap: 50px;
   background-image: url(../../img/banner-newsletter-desktop.png);
   background-size: contain;
-  background-position: 50% 0;
+  background-position: top left;
 
   // .frm_submit.frm_flex {
   //   ::before {
