--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -14,10 +14,14 @@
   }
 
   article {
-    background: #fff;
+    background: var(--color-white);
     padding: 40px;
     grid-row: auto;
     overflow: hidden;
+
+    &.destaque-blog {
+      padding: 0;
+    }
 
     &.post-destaque:nth-child(-n + 2) {
       grid-row: span 2;
