--- a/sass/views/_blog.scss
+++ b/sass/views/_blog.scss
@@ -5,20 +5,33 @@ body.blog,
 body.archive {
   .block-blog {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
     align-items: start;
 
+    @media (min-width: breakpoints.$width-max-mobile) {
+      grid-template-columns: 2fr 1fr;
+    }
+
     .grid {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
+
+      @media (min-width: breakpoints.$width-max-mobile) {
+        grid-template-columns: 1fr 1fr;
+      }
 
       article.destaque-blog {
-        grid-column: span 2;
-        display: flex;
-        gap: 40px;
+        display: block;
+        gap: 20px;
 
-        .thumbnail {
-          flex-basis: 100%;
+        @media (min-width: breakpoints.$width-max-mobile) {
+          grid-column: span 2;
+          display: flex;
+          gap: 40px;
+
+          .thumbnail {
+            flex-basis: 100%;
+          }
         }
       }
     }
@@ -30,12 +43,16 @@ body.archive {
 
     &:first-child,
     &.destaque-blog {
-      grid-column: span 2;
-      display: flex;
-      gap: 40px;
+      display: block;
 
-      .thumbnail {
-        flex-basis: 100%;
+      @media (min-width: breakpoints.$width-max-mobile) {
+        grid-column: span 2;
+        display: flex;
+        gap: 40px;
+
+        .thumbnail {
+          flex-basis: 100%;
+        }
       }
     }
   }
@@ -72,10 +89,13 @@ body.archive {
 
     .detalhes-do-post {
       flex-basis: 55%;
-      padding: 0 8% 0 14%;
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      @media (min-width: breakpoints.$width-wide) {
+        padding: 0 8% 0 14%;
+      }
 
       .post-title {
         font-size: var(--typography-h3-size);
@@ -106,7 +126,14 @@ body.archive {
 }
 
 .sidebar {
-  &>div:not(.s-categorias) {
+  display: none;
+  margin: 0;
+
+  @media (min-width: breakpoints.$width-max-mobile) {
+    display: block;
+  }
+
+  &>div:not(.s-filtrar, .histórico) {
     margin-top: 40px;
   }
 
