--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -2,6 +2,10 @@
 
 #chamada-home {
   margin: 0;
+
+  .owl-carousel {
+    padding: 0;
+  }
 }
 
 section {
@@ -124,6 +128,11 @@ time {
 }
 
 #colunas-e-resenhas {
+  margin-top: 0;
+
+  .titulo {
+    margin: 36px 0 24px 0;
+  }
 
   .section-header {
     display: flex;
@@ -143,14 +152,21 @@ time {
   .resenha-item {
     position: relative;
     background: var(--color-white);
-    padding: 70px 70px 190px 70px;
     text-align: center;
+    padding-bottom: 130px;
+
+    @media (min-width: breakpoints.$width-wide) {
+      padding: 70px 70px 190px;
+    }
   }
 
   .resenha-titulo {
     text-transform: uppercase;
-    height: 110px;
     margin-bottom: 40px;
+
+    @media (min-width: breakpoints.$width-max-mobile) {
+      height: 110px;
+    }
 
     h3,
     h4 {
@@ -194,10 +210,19 @@ time {
 
   .resenha-data {
     position: absolute;
-    bottom: 70px;
-    left: 70px;
+    bottom: 40px;
+    left: 40px;
     margin: 0;
     text-transform: uppercase;
+
+    @media (min-width: breakpoints.$width-wide) {
+      bottom: 70px;
+      left: 70px;
+    }
+
+    time {
+      font-size: 0.8rem;
+    }
   }
 
   @media (max-width: breakpoints.$width-max-mobile) {
